# chatgpt-register-sub2api

./: .gitignore  README.md  config.example.yaml  pyproject.toml
chatgpt_register_sub2api/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
chatgpt_register_sub2api/export/: sub2api.py
chatgpt_register_sub2api/login/: login_flow.py
chatgpt_register_sub2api/register/: mail_provider.py  registrar.py  session.py
chatgpt_register_sub2api/workspace/: joiner.py
