[project]
name = "chatgpt-register-sub2api"
version = "0.1.0"
description = "ChatGPT 账号自动注册 + K12 母号加入 + Sub2API JSON 导出"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.8.0",
    "pyyaml>=6.0",
]

[project.scripts]
chatgpt-register = "chatgpt_register_sub2api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatgpt_register_sub2api"]
